Add topic restore, spam, and Bubble Up operations
